--- a/Application/Admin/View/Register/register.html
+++ b/Application/Admin/View/Register/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="admin_login_wrap">
-    <h1 style="text-align: center">用户登录</h1>
+    <h1 style="text-align: center">用户注册</h1>
     <div class="adming_login_border">
         <div class="admin_input">
             <form action="" method="post">
@@ -24,7 +24,7 @@
                         <label for="verify">验证码：</label>
                         <input type="text" name="verify" id="verify" size="10" class="admin_input_style" />
                         <img src="__CONTROLLER__/verify" width="100" height="50" style="cursor: pointer;"
-                            onclick="this.src='__CONTROLLER__/verify/'+Math.random();">
+                             onclick="this.src='__CONTROLLER__/verify/'+Math.random();">
                     </li>
                     <li>
                         <input type="submit" tabindex="3" value="提交" class="btn btn-primary" />
